  - persp3d() and plot3d() sometimes miscalculated ranges involving NAs.
  - select3d() and rgl.select() produced a very inefficient test function.
  
 v0.78
  - fix miscalculation of mouseMatrix that caused disappearing views.
  - rgl.texts() and text3d() can now handle font and size specifications
    using the FreeType library on any platform, or GDI on Windows. 
  - adj is supported both horizontally and vertically in drawing text.
  - rgl.pop was very slow when given a long list of ids.
  - a workaround for OSX 10.5 OpenGL problems has been incorporated
    (thanks to mkv22@cam.ac.uk).

v0.79
  - rgl.pop() could cause corruption when multiple windows were open.
  - added mouseCallbacks demo, to show R implementations of standard
    mouse handlers, multiple connected windows, stereo view, etc.
  - added "silent" argument to rgl.set(), to allow temporary changes
    to focus without changing window labels.
  - added natural spline extrapolation to par3dinterp.

v0.80
  - worked around bug(?) in Mac OSX FTGL rendering
  - updated FTGL to 2.1.3rc5
  
v0.81
  - converted Freetype font error into warning
  - rglFonts was being set at install time, but it should be set at load
    time.
  - fixed configuration problems in OS X
  - fixed executable marker on a number of files
  
v0.81.704
  - rewrote internal rendering of transparent and anti-aliased shapes,
    so they will be rendered better when there are several in the same 
    scene
  - added material property "antialias", which causes points to be 
    drawn as smooth circles and lines to be antialiased.
  - fixed a bug in the bounding box decoration which caused axis labels
    to be plotted in the wrong place.
  - fixed a bug in the Windows driver which caused the standard system 
    font to disappear when justified.
  - added material parameter lwd for line width; size now applies only
    to points.
  - increased default point size to 3 pixels across.
  - fixed bug in open3d:  "..." was being ignored.