@@ -1,5 +1,5 @@
 Package: rgl
-Version: 0.81.704
+Version: 0.81.705
 Date: 2008-09-18
 Title: 3D visualization device system (OpenGL)
 Author: Daniel Adler <dadler@uni-goettingen.de>, Duncan Murdoch <murdoch@stats.uwo.ca>
